Add margin to 'about-company' section

--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ margin-right: 29px;
     height:270px;
     background-color:  #FAF3EA;
     padding:100px 53px;
-    
+    margin-top:150px;
 }
 .company-info{
 height: 70px;
